# zdoc

./: ANALYSIS_SUMMARY.md  Cargo.toml  DECODED_EXAMPLES.md  FUTURE.md  README.md  RUSTDOC_INDEX_FORMAT.md  analysis_output.txt  analyze_index.py  analyze_index.rs  decode_stringdex.py  search_index_structure.json  simple_decode.py
src/: main.rs
