[package]
name = "zdoc"
version = "0.0.1"
edition = "2024"
description = "A Rust documentation generator"
repository = "https://github.com/xandwr/rustdoc"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.100"
cargo_metadata = "0.23.1"
clap = { version = "4.5.56", features = ["derive"] }
fuzzy-matcher = "0.3.7"
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
rustdoc-types = "0.36.0"
reqwest = { version = "0.13.1", features = ["gzip"] }
colored = "3.1.1"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }
flate2 = "1.0"
